--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -32,6 +32,7 @@ button {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 button:hover {
@@ -98,4 +99,16 @@ input[type="submit"]:hover {
 
 .checkbox{
     width: fit-content;
+}
+
+.option-group {
+    font-weight: bold;
+    font-style: italic;
+}
+    
+.option-series {
+    padding-left: 15px;
+}
+.option-model {
+    padding-left: 30px;
 }
